Testing the application